Created a new lootchest module and moved the necessary files into the new module